namespaces/live.cloud-platform.service.justice.gov.uk/srrc-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "srrc-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Central Digital"
    cloud-platform.justice.gov.uk/slack-channel: "srrc-tech"
    cloud-platform.justice.gov.uk/application: "Safer reception and release from custody"
    cloud-platform.justice.gov.uk/owner: "0bd4a7e8.JusticeUK.onmicrosoft.com@uk.teams.ms"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/srrc"
    cloud-platform.justice.gov.uk/team-name: "SRRC-Dev-Team"
    cloud-platform.justice.gov.uk/review-after: "2026-09-03"
